mmrcis/mssql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mmrcis-mssql
  labels: 
    app: mmrcis-mssql
spec:
  selector:
    matchLabels:
      app: mmrcis-mssql
  template:
    metadata:
      name: mmrcis-mssql
      labels:
        app: mmrcis-mssql
    spec:
      securityContext:
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
      restartPolicy: Always
      volumes:
        - name: mssql-data
          persistentVolumeClaim:
            claimName: mmrcis-mssql-data
      containers:
        - name: mmrcis-mssql
          image: mcr.microsoft.com/mssql/server:2022-latest
          volumeMounts:
            - name: mssql-data
              mountPath: /var/opt/mssql/data
          ports:
            - name: mssql
              containerPort: 1433
          resources:
            requests:
              cpu: 256m
              memory: 512M
            limits:
              cpu: 1000m
              memory: 1G
