mmrcis/mmrcis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mmrcis
  labels:
    app: mmrcis
spec:
  selector:
    app: mmrcis
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
