mmrcis/mssql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mmrcis-mssql
  labels:
    app: mmrcis-mssql
spec:
  selector:
    app: mmrcis-mssql
  ports:
    - name: mssql
      port: 1433
      targetPort: 1433
      protocol: TCP
